--- a/SSHy/package.json
+++ b/SSHy/package.json
@@ -12,15 +12,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~8.2.14",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/http": "^7.2.16",
+    "@angular/material": "^7.3.1",
+    "@angular/material-moment-adapter": "^9.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "angular-in-memory-web-api": "^0.11.0",
+    "core-js": "^3.6.5",
+    "hammerjs": "^2.0.8",
+    "moment": "^2.25.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
