games stored in file

--- a/SSHy/angular.json
+++ b/SSHy/angular.json
@@ -21,6 +21,7 @@
             "aot": false,
             "assets": [
               "src/favicon.ico",
+              "./src/assets/games.json",
               {
                 "glob": "*.js",
                 "input": "./src/assets/parchment/lib",
