--- a/SSHy/angular.json
+++ b/SSHy/angular.json
@@ -40,7 +40,7 @@
               {
                 "glob": "*.js",
                 "input": "./src/assets/sshy/",
-                "output": "./sshy/"
+                "output": "./ssh/"
               },
               {
                 "glob": "*.css",
